@@ -27,7 +27,7 @@
   </info>
 
   <configurations>
-    <include file="${nutch.root}/ivy/ivy-configurations.xml"/>
+    <include file="${basedir}/ivy/ivy-configurations.xml"/>
   </configurations>
 
   <publications>
